message SimpleRspArgs {
	required int32 retCode = 1;
	optional string retDesc = 2;
}