message UploadBuddyListResult {
	required int32 statusCode = 1;
}